Bug 495478 - "Buttons on summary page for collapsed threads don't have same height" [r=bienvenu ui-r=clarkbw]

--- a/mail/base/content/multimessageview.css
+++ b/mail/base/content/multimessageview.css
@@ -149,12 +149,6 @@
   display: inline;
 }
 
-#trash {
-  min-height: 16px !important;
-  min-width: 21px !important;
-  padding: 0px;
-}
-
 #column {
   float: right;
   right: 1em;
