--- a/mail/themes/gnomestripe/mail/multimessageview.css
+++ b/mail/themes/gnomestripe/mail/multimessageview.css
@@ -27,27 +27,7 @@ body {
 
 
 .button {
-  -moz-appearance: button;
   font: message-box;
-  min-width: 32px !important;
-  margin-bottom: 2em;
-}
-
-/* and every trash is different */
-
-#trash {
-  min-height: 28px !important;
-  min-width: 32px !important;
-  padding: 0px;
-}
-
-.trashButton {
-  padding: 2px;
-  list-style-image: url("moz-icon://stock/gtk-delete?size=menu");
-  min-height: 16px !important;
-  min-width: 16px !important;
-  width: 16px;
-  height: 16px;
 }
 
 .star {
